Graafinen melko valmis.